--- a/Apps/homePage.html
+++ b/Apps/homePage.html
@@ -3,6 +3,7 @@
 <head>
   <title>Home Page</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -62,7 +63,8 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li><a href="#">Notification</a></li>
+        <li><a href="/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
   </div>
@@ -80,7 +82,6 @@
       <p>A virtual classroom is a teaching and learning environment where participants can interact, communicate, view and discuss presentations, and engage with learning resources while working in groups, all in an online setting. The medium is often through a video conferencing application that allows multiple users to be connected at the same time through the Internet, which allows users from virtually anywhere to participate.</p>
       <hr>
       <h3>Courses</h3>
-      
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
@@ -94,7 +95,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p style="font-size: 20px;">Footer Text</p>
+  <p style="font-size: 20px;"></p>
 </footer>
 
 </body>
