--- a/Apps/profile.html
+++ b/Apps/profile.html
@@ -6,7 +6,7 @@
     <style>
         .navbar {
             height: 90px;
-            background-color: #333;
+            background-color: rgb(19, 18, 18);
             color: whitesmoke;
             margin-bottom: 15px;
             text-align: center;
