--- a/Apps/homePage.html
+++ b/Apps/homePage.html
@@ -42,13 +42,13 @@
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="navbar-header" style="height: 50px;">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#"><img src="/images/logo.jpg" height="40px" width="40px" alt="logo"  ></a>
+      <a class="navbar-brand" href="#"><i class="fa fa-user" style="font-size:30px;color : whitesmoke"></i></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -90,7 +90,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p style="font-size: 20px;"></p>
+  <p style="font-size: 20px;">&copy Classroom</p>
 </footer>
 
 </body>
