--- a/Apps/profile.html
+++ b/Apps/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <style>
@@ -19,7 +20,8 @@
     <body >
         <div>
             <header class="navbar" >Profile</header>
-            <center><img src="./images/avatar.png" alt="Profile Picture" height="150px" width="150px"></center>
+            <center><i class="fa fa-user" style="font-size:100px;color : burlywood"></i></center>
+            <!-- <center><img src="./images/avatar.png" alt="Profile Picture" height="150px" width="150px"></center> -->
         </div>
         <form method="POST" action="/updateProfile" style="margin-right: 35%;margin-left: 35%;margin-top: 3%;">
             <div class="form-row">
