--- a/Apps/profile.html
+++ b/Apps/profile.html
@@ -4,7 +4,6 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
-    <script src="bundle.js"></script>
     <style>
         .navbar {
             height: 90px;
@@ -57,14 +56,14 @@
                 
               </div>
               <ul class="nav justify-content-center" style="margin-left:10%; margin-right: 10%; margin-top: 2%;">
-                <li class="nav-item">
-                    <button type="submit" class="btn btn-primary">Update</button>
+                <li class="nav-item" style="padding-right:4px ;">
+                    <button type="submit" class="btn btn-warning">Update</button>
+                </li>
+                <li class="nav-item" style="padding-right:4px ;">
+                    <a class="btn btn-info" href="/showProfile">Show Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/showProfile">Show Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/home">Home</a>
+                    <a class="btn btn-success" href="/home">Home</a>
                 </li>
               </ul>
                 
