--- a/Apps/homePage.html
+++ b/Apps/homePage.html
@@ -133,7 +133,7 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star"></span>
-                    <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                    <p style="padding-bottom: 5px;" ><a class="btn btn-primary"  href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
                   </div>
               </div>
               <div class="column">
@@ -147,7 +147,7 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star"></span>
-                    <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                    <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
                 </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
                 </div>
             </div>
             <div class="column">
@@ -177,7 +177,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
               </div>
           </div>
         </div>
@@ -193,7 +193,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
                 </div>
             </div>
             <div class="column">
@@ -207,7 +207,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
               </div>
           </div>
         </div>
@@ -223,7 +223,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
                 </div>
             </div>
             <div class="column">
@@ -237,7 +237,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
               </div>
           </div>
         </div>
