--- a/Apps/homePage.html
+++ b/Apps/homePage.html
@@ -38,7 +38,8 @@
     }
     .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        max-width: 300px;
+        width: 400px;
+        height: 270px;
         margin: auto;
         text-align: center;
         font-family: arial;
@@ -112,6 +113,7 @@
     <div class="col-sm-2 sidenav">
     <p style="font-size: large;color: #000;border-style: dashed;">Online course provider</p>
       <p><a class="btn btn-info" href="https://udemy.com">Udemey</a></p>
+      <p><a class="btn btn-info" href="https://www.coursera.org/courses?query=free">Coursera</a> </p>
       <p><a class="btn btn-info" href="https://internshala.com">Internshala</a></p>
       <p><a class="btn btn-info" href="https://nptel.ac.in">NPTEL</a></p>
     </div>
@@ -123,7 +125,7 @@
           <h2 style="color: #e67300;">Courses</h2>
           <div class="row">
               <div class="column">
-                <div class="card" style="margin-left: 10%;margin-top: 5%;">
+                <div class="card" style="margin-left: 1%;margin-top: 5%;">
                     <h1>Complete nodejs developer course</h1>
                     <p class="price"><i class="fa fa-rupee"></i>420</p>
                     <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
@@ -137,107 +139,107 @@
                   </div>
               </div>
               <div class="column">
-                <div class="card" style="margin-left: 10%;margin-top: 5%;">
-                    <h1>Complete nodejs developer course</h1>
+                <div class="card" style="margin-left: 1%;margin-top: 5%;">
+                    <h1>Web Development w/ Google's Go         </h1>
                     <p class="price"><i class="fa fa-rupee"></i>420</p>
-                    <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
-                    <span style="color: chocolate;">4.1</span>
+                    <p>Learn Web Programming from a University Professor</p>
+                    <span style="color: chocolate;">4.7</span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                    <span class="fa fa-star-half-o" style="color: rgb(241, 144, 75);"></span>
+                    <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/go-programming-language/?utm_source=adwords&utm_medium=udemyads&utm_campaign=WebDevelopment_v.PROF_la.EN_cc.INDIA_ti.8322&utm_content=deal4584&utm_term=_._ag_82381207578_._ad_437511380638_._kw__._de_c_._dm__._pl__._ti_dsa-774930035449_._li_1007810_._pd__._&matchtype=b&gclid=Cj0KCQjwwr32BRD4ARIsAAJNf_0Cg8JTLcr2uh1ptuwtoSMrsn4KBsgGOuWZABQAfcbN4W2rT4HCpwUaAloEEALw_wcB">View Course</a></p>
                 </div>
             </div>
           </div>
           <div class="row">
             <div class="column">
-              <div class="card" style="margin-left: 10%;margin-top: 10%;">
-                  <h1>Complete nodejs developer course</h1>
+              <div class="card" style="margin-left: 1%;margin-top: 10%;">
+                  <h1>Beginner React. Create a movie web app</h1>
                   <p class="price"><i class="fa fa-rupee"></i>420</p>
-                  <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
-                  <span style="color: chocolate;">4.1</span>
+                  <p>A project oriented React course! Create an IMDB style real world Web Application in React js</p>
+                  <span style="color: chocolate;">4.3</span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star"></span>
-                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/learn-react-the-fun-way/">View Course</a></p>
                 </div>
             </div>
             <div class="column">
-              <div class="card" style="margin-left: 10%;margin-top: 10%;">
-                  <h1>Complete nodejs developer course</h1>
+              <div class="card" style="margin-left: 1%;margin-top: 10%;">
+                  <h1>Build Responsive Real World Websites with HTML5 and CSS3</h1>
                   <p class="price"><i class="fa fa-rupee"></i>420</p>
-                  <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
-                  <span style="color: chocolate;">4.1</span>
+                  <p>HTML5 and CSS3 step-by-step from scratch</p>
+                  <span style="color: chocolate;">4.6</span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <span class="fa fa-star-half-o" style="color: rgb(241, 144, 75);"></span>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/design-and-develop-a-killer-website-with-html5-and-css3/">View Course</a></p>
               </div>
           </div>
         </div>
         <div class="row">
             <div class="column">
-              <div class="card" style="margin-left: 10%;margin-top: 10%;">
-                  <h1>Complete nodejs developer course</h1>
-                  <p class="price"><i class="fa fa-rupee"></i>420</p>
-                  <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
-                  <span style="color: chocolate;">4.1</span>
+              <div class="card" style="margin-left: 1%;margin-top: 10%;">
+                  <h1>Machine Learning</h1>
+                  <p class="price"><i class="fa fa-rupee"></i>Free</p>
+                  <p>Offered by Stanford</p>
+                  <span style="color: chocolate;">4.9</span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <span class="fa fa-star checked"></span>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.coursera.org/learn/machine-learning">View Course</a></p>
                 </div>
             </div>
             <div class="column">
-              <div class="card" style="margin-left: 10%;margin-top: 10%;">
-                  <h1>Complete nodejs developer course</h1>
-                  <p class="price"><i class="fa fa-rupee"></i>420</p>
-                  <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
+              <div class="card" style="margin-left: 1%;margin-top: 10%;">
+                  <h1>Single Page Web Applications with AngularJS</h1>
+                  <p class="price"><i class="fa fa-rupee"></i>Free</p>
+                  <p>Offered by JOHNS HOPKINS University</p>
                   <span style="color: chocolate;">4.1</span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <span class="fa fa-star checked"></span>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.coursera.org/learn/single-page-web-apps-with-angularjs">View Course</a></p>
               </div>
           </div>
         </div>
         <div class="row" style="padding-bottom:10px">
             <div class="column">
-              <div class="card" style="margin-left: 10%;margin-top: 10%;">
-                  <h1>Complete nodejs developer course</h1>
+              <div class="card" style="margin-left: 1%;margin-top: 10%;">
+                  <h1>Docker for the Absolute Beginner-DevOps</h1>
                   <p class="price"><i class="fa fa-rupee"></i>420</p>
-                  <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
-                  <span style="color: chocolate;">4.1</span>
+                  <p>Learn Docker with Hands On Coding Exercises. For beginners in DevOps</p>
+                  <span style="color: chocolate;">4.6</span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <span class="fa fa-star-half-o" style="color: rgb(241, 144, 75);"></span>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/learn-docker/">View Course</a></p>
                 </div>
             </div>
             <div class="column">
-              <div class="card" style="margin-left: 10%;margin-top: 10%;">
-                  <h1>Complete nodejs developer course</h1>
+              <div class="card" style="margin-left: 1%;margin-top: 10%;">
+                  <h1>Java Web Services</h1>
                   <p class="price"><i class="fa fa-rupee"></i>420</p>
-                  <p>Learn Node.js by building real world application with node,express,mongodb and more!!</p>
-                  <span style="color: chocolate;">4.1</span>
+                  <p>Learn how to design,create , consume and secure SOAP and REST web services from scratch in easy steps.</p>
+                  <span style="color: chocolate;">4.4</span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">View Course</a></p>
+                  <span class="fa fa-star-half-o" style="color: rgb(241, 144, 75);"></span>
+                  <p style="padding-bottom: 5px;"><a class="btn btn-primary" href="https://www.udemy.com/course/java-web-services/">View Course</a></p>
               </div>
           </div>
         </div>
@@ -262,6 +264,13 @@
           
         </form>
   </div>
+</div>
+<div>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
 </div>
 
 <footer class="container-fluid text-center" id="about" style="background-color:  #000; height: 120px;">
